# singapore-hackathon-2024

./: .gitignore  README.md  pyproject.toml
agents/: math_professor.py  next_search_recommender.py  webber.py
functions/: math.py  real_time.py  web.py
goog/: agent.py  decorators.py  function_calling.py  gauth.py
main/: agent.py  chelsea.py  hello_world.py
